<resources>
    <string name="app_name">Proyecto Grado</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_login_user">Registro Usuario</string>
    <string name="inicio">Inicio</string>
    <string name="comida">Comida</string>
    <string name="deportivo">Deporte</string>
    <string name="caminatas">Caminatas</string>
    <string name="ciclorutas">Ciclorutas</string>
    <string name="home">Filtros</string>
    <string name="tab1">saludable</string>
    <string name="tab2">no saludable</string>
    <string name="tab3">intermedia</string>
    <string name="titulo_botonsheetcomida">Descripción del contenido</string>
    <string name="descripcion_comidasaludable">"En esta sección puedes agregar lugares que consideres que están en el rango de comida saludable</string>
    <string name="agregar_lugar">"Agregar Lugar"</string>
    <string name="cambiodevista_normal">"Vista de mapa normal"</string>
    <string name="cambiodevista_hibrido">"Vista de mapa por satelite"</string>
    <string name="nombre_lugar">"Nombre del lugar*"</string>
    <string name="descripcion_lugar">"Descripción del lugar*"</string>
    <string name="agregar_imagen">"Agregar imagen"</string>
    <string name="continuar">"Agregar Lugar  "</string>
    <string name="titulo_botonsheetprincipal">Filtro de lugares</string>
    <string name="hint_buscardireccion">Buscar dirección</string>
    <string name="titulo_1">Tiendas saludables</string>
    <string name="titulo_2">Alimentos variados</string>
    <string name="titulo_3">Restaurantes saludables</string>
    <string name="titulo_dp_1">Deporte con amigos</string>
    <string name="titulo_dp_2">Gimnasio público</string>
    <string name="titulo_dp_3">Lugares de deporte saludable</string>
    <string name="titulo_dpr_1">Deporte privado</string>
    <string name="titulo_dpr_2">Deporte con amigos</string>
    <string name="titulo_dpr_3">Gimnasios privados</string>
    <string name="titulo_ci_2">Restaurantes comida Intermedia</string>
    <string name="titulo_ci_1_3">Alimentos Intermedios</string>
    <string name="titulo_cns_2_1">Restaurantes comida no saludable</string>
    <string name="titulo_cns_3">Alimentos comida no saludable</string>
    <string name="titulo_cic_1">Espacios de ciclorutas</string>
    <string name="titulo_cic_2">Ayuda al medio ambiente y a tu cuerpo</string>
    <string name="titulo_cam_1">Lugares de caminatas</string>
    <string name="titulo_cam_2">Cuida tu cuerpo</string>
    <string name="informacion_imges_comida_01">Puedes agregar lugares donde vendan alimentos saludables.</string>
    <string name="informacion_imges_comida_02">Agrega lugares que se destaquen por brindar comida saludable para personas con difrentes estilos alimenticios.</string>
    <string name="informacion_imges_comida_03">Si consideras que un lugar entra en el rango de comida saludable puedes agregarlo en esta sección.</string>
    <string name="informacion_imges_comida_intermedia_01">Si eres de las personas que te gusta consumir comida saludable pero también comida no saludable, este es la sección.</string>
    <string name="informacion_imges_comida_intermedia_02">Puedes agregar lugares que se destaquen por vender productos saludables y no saludables.</string>
    <string name="informacion_imges_comida_intermedia_03">Si consideras que un lugar entra en el rango de comida intermedia puedes agregarlo en esta sección.</string>
    <string name="informacion_imges_comida_no_s_01">Agrega lugares que se destaquen y que te guste adquirir comidas rápidas.</string>
    <string name="informacion_imges_comida_no_s_02">Si te gusta ir a establecimientos donde vendan comida chatarra puedes agregarlo en esta sección.</string>
    <string name="informacion_imges_comida_no_s_03">Agrega los lugares que consideres que están en el rango de comida no saludable.</string>
    <string name="informacion_dp_01">Agrega los lugares que consideres que puedes disfrutar con personas.</string>
    <string name="informacion_dp_02">En esta sección puedes agregar los deportes que practiques y que sean publicos.</string>
    <string name="informacion_dp_03">Puedes agregar lugares de deporte público en esta sección.</string>
    <string name="informacion_dpr_01">En esta sección puedes agregar lugares privados donde puedas hacer deporte como: tenis, natación, boxeo...</string>
    <string name="informacion_dpr_02">Puedes agregar lugares privados donde puedas conpartir momentos de deporte saludable con amigos.</string>
    <string name="informacion_dpr_03">Agrega en esta sección gimnasios privados donde puedas ejercitarte de manera saludable.</string>
    <string name="informacion_cic_01">Agrega en esta sección lugares donde te guste salir a montar cicla.</string>
    <string name="informacion_cic_02">Si eres amigo del medio ambiente y no te gusta usar mucho los transporte publicos pero si la cilca, agrega las rutas donde transitas.</string>
    <string name="informacion_cam_01">Si estás acostumbrado a madrugar para salir a caminar o trotar agrega los lugares donde vas en está sección.</string>
    <string name="informacion_cam_02">Agrega los lugares que consideres que entran en está sección.</string>
    <string name="filtocomida">Comidas</string>
    <string name="filtoejercicio">Ejercicio</string>
    <string name="filtoejerciciopri"> Ejercicio</string>
    <string name="filtocaminata">Caminatas</string>
    <string name="filtociclorutas">Ciclo rutas</string>
    <string name="filtociclorutaspri"> Ciclo rutas</string>
    <string name="quitarfiltros"> Quitar filtro</string>
    <string name="login">Ingresar</string>
    <string name="usuario"> Ingrese el usuario o el código</string>
    <string name="clave"> Ingrese la clave</string>
    <string name="ingreso">Hola</string>
    <string name="ingreso_account">Ingresa tu cuenta</string>
    <string name="text_account">¿No tienes una cuenta?</string>
    <string name="registro">Registrate ahora</string>
    <string name="acceder">Ingreso</string>
    <string name="login_wrong">El usuario/código o la clave son incorrectas. volver a intentar</string>
    <string name="empty_fields">Algunos campos están vacios</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="wrong">Error al ingresar</string>
    <string name="register">Registro</string>
    <string name="register_app">Registrate</string>
    <string name="user">Usuario</string>
    <string name="access_code">Código acceso</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="registro_correcto">Se ha registrado exitosamente</string>
    <string name="cargando">Cargando, por favor espere...</string>
    <string name="error_registro">No se pudo registrar en la app</string>
    <string name="error_ingreso">No se pudo ingresar</string>
    <string name="text_login">¿Seguro que ya tienes una cuenta?</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="comida_saludable">Comida Saludable</string>
    <string name="comida_intermedia">Comida Intermedia</string>
    <string name="comida_no_saludable">Comida no Saludable</string>
    <string name="deporte_publico">Deporte Público</string>
    <string name="deporte_privado">Deporte Privado</string>
    <string name="direccion_marcador">Dirección del lugar*</string>
    <string name="registro_lugar">Agregando Lugar</string>
    <string name="campos_vacios">Algunos campos están vacios. Ingresa los campos del formulario.</string>
    <string name="direccion_incorrecta">La dirección ingresada no es correcta, puedes volver al mapa y buscar la dirección correcta.</string>
    <string name="error_guardar_lugar">No se pudo guardar el lugar, volver a ingresar a la aplicación.</string>
    <string name="intento_guardar_lugar">Guardando el lugar...</string>
    <string name="tipos_de_deporte">Cargando tipos de deporte.</string>
    <string name="tipos_deporte">Selección tipos de deporte*</string>
    <string name="escriba_aqui">Escriba aquí</string>
    <string name="nombre_tipo_deporte">Nombre tipo deporte*</string>
    <string name="tipo_lugar">Tipo de lugar</string>

</resources>
