<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgrisclarologin"
    tools:context=".Login_users">

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/color_login">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:src="@drawable/logo" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/relative"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/acceder"
            android:textColor="@color/coloWgite"
            android:textSize="35dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bordelinearlayout"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/colornaranjaosucro"
                android:text="@string/ingreso" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/colornegro"
                android:text="@string/ingreso_account" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/codigo"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/estilo_login"
                    android:hint="@string/usuario"
                    android:paddingLeft="6dp"
                    android:textColor="@color/colornegro"
                    android:textColorHint="@color/colornegro"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="-35dp"
                    android:background="@drawable/estilo_login"
                    android:layout_marginLeft="-40dp"
                    android:layout_toEndOf="@+id/codigo"
                    android:layout_toRightOf="@+id/codigo"
                    android:src="@drawable/user" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/clave"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:inputType="textPassword"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/estilo_login"
                    android:hint="@string/clave"
                    android:paddingLeft="6dp"
                    android:textColor="@color/colornegro"
                    android:textColorHint="@color/colornegro"
                    android:textSize="12dp" />

                <ImageButton
                    android:id="@+id/key"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="-35dp"
                    android:background="@drawable/estilo_login"
                    android:layout_marginLeft="-40dp"
                    android:layout_toEndOf="@+id/codigo"
                    android:layout_toRightOf="@+id/codigo"
                    android:src="@drawable/password" />

            </LinearLayout>

            <Button
                android:id="@+id/ingreso"
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_login"
                android:text="@string/login"
                android:textSize="17dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/coloWgite"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/account"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/colornegro"
                android:text="@string/text_account" />

            <TextView
                android:id="@+id/registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="12dp"
                android:textColor="@color/colornaranjaosucro"
                android:clickable="true"
                android:layout_toRightOf="@+id/account"
                android:autoLink="all"
                android:text="@string/registro" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>