<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgrisclaro"
    tools:context=".Register_users">


    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/color_login">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/logo" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/relative"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/register_app"
            android:textColor="@color/coloWgite"
            android:textSize="35dp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/linear"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bordelinearlayout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/colornaranjaosucro"
                    android:text="@string/ingreso" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colornegro"
                    android:text="@string/register_app" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="35dp"
                        android:background="@drawable/estilo_login"
                        android:hint="@string/name"
                        android:paddingLeft="6dp"
                        android:textColor="@color/colornegro"
                        android:textColorHint="@color/colornegro"
                        android:textSize="12dp"/>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="-35dp"
                        android:background="@drawable/estilo_login"
                        android:layout_marginLeft="-40dp"
                        android:layout_toEndOf="@+id/codigo"
                        android:layout_toRightOf="@+id/codigo"
                        android:src="@drawable/user" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/user"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="35dp"
                        android:background="@drawable/estilo_login"
                        android:hint="@string/user"
                        android:paddingLeft="6dp"
                        android:textColor="@color/colornegro"
                        android:textColorHint="@color/colornegro"
                        android:textSize="12dp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="-35dp"
                        android:background="@drawable/estilo_login"
                        android:layout_marginLeft="-40dp"
                        android:layout_toEndOf="@+id/codigo"
                        android:layout_toRightOf="@+id/codigo"
                        android:src="@drawable/user" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="35dp"
                        android:background="@drawable/estilo_login"
                        android:hint="@string/access_code"
                        android:paddingLeft="6dp"
                        android:textColor="@color/colornegro"
                        android:textColorHint="@color/colornegro"
                        android:textSize="12dp" />

                    <ImageButton
                        android:id="@+id/code_random"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="-35dp"
                        android:background="@drawable/estilo_login"
                        android:layout_marginLeft="-40dp"
                        android:layout_toEndOf="@+id/codigo"
                        android:layout_toRightOf="@+id/codigo"
                        android:src="@drawable/random" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/clave_r"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:inputType="textPassword"
                        android:layout_marginRight="35dp"
                        android:background="@drawable/estilo_login"
                        android:hint="@string/password"
                        android:paddingLeft="6dp"
                        android:textColor="@color/colornegro"
                        android:textColorHint="@color/colornegro"
                        android:textSize="12dp" />

                    <ImageButton
                        android:id="@+id/key"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="-35dp"
                        android:background="@drawable/estilo_login"
                        android:layout_marginLeft="-40dp"
                        android:layout_toEndOf="@+id/codigo"
                        android:layout_toRightOf="@+id/codigo"
                        android:src="@drawable/key_visibility_off" />

                </LinearLayout>

                <Button
                    android:id="@+id/registro_usuario"
                    android:layout_width="180dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/boton_login"
                    android:text="@string/registro"
                    android:textSize="17dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/coloWgite"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/account"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textColor="@color/colornegro"
                    android:text="@string/text_login" />

                <TextView
                    android:id="@+id/ingreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="12dp"
                    android:textColor="@color/colornaranjaosucro"
                    android:clickable="true"
                    android:layout_toRightOf="@+id/account"
                    android:autoLink="all"
                    android:text="@string/login" />
            </RelativeLayout>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>